<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9FA8DA"
    android:backgroundTint="#80CBC4"
    tools:context=".Login">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/loginBtn"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/txtUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.843" />

    <EditText
        android:id="@+id/txtUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="275dp"
        android:backgroundTint="@color/white"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/inputUser"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.399" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:width="275dp"
        android:backgroundTint="@color/white"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/inputPass"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUser"
        app:layout_constraintVertical_bias="0.002" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="196dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:width="250dp"
        android:backgroundTint="@color/purple_200"
        android:onClick="Login"
        android:text="@string/loginBtn"
        android:textColor="@color/black"
        android:textColorHighlight="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPass" />

    <TextView
        android:id="@+id/doesntHaveAccountLink"
        android:layout_width="233dp"
        android:layout_height="54dp"
        android:layout_marginTop="13dp"
        android:background="#006064"
        android:backgroundTint="#006064"
        android:contextClickable="true"
        android:fontFamily="sans-serif-medium"
        android:minHeight="48dp"
        android:onClick="openCreateAccount"
        android:text="@string/doesntHaveAccount"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.474" />

</android.support.constraint.ConstraintLayout>